--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,7 @@
 include README.md
 include VEDIS_LICENSE
+include vedis/src/vedis.c
+include vedis/src/vedis.h
 
 global-exclude *.pyc
 global-exclude *.o
