--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -15,7 +15,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: pip deps
         run: |
-          pip install cython
+          pip install setuptools cython
           python setup.py build_ext -i
       - name: runtests
         run: python tests.py
